--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@gesslar/actioneer",
   "version": "0.1.3",
-  "description": "Ready? Set?? ACTION!! pew!pew!pew!pew!",
+  "description": "Ready? Set?? ACTION!! pew! pew! pew!",
   "main": "./src/index.js",
   "type": "module",
   "exports": {
@@ -17,7 +17,7 @@
   ],
   "sideEffects": false,
   "engines": {
-    "node": ">=20"
+    "node": ">=22"
   },
   "scripts": {
     "lint": "eslint src/",
