--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gesslar/actioneer",
-  "version": "0.4.0",
+  "version": "1.0.0",
   "description": "Ready? Set?? ACTION!! pew! pew! pew!",
   "main": "./src/index.js",
   "type": "module",
@@ -23,8 +23,8 @@
     "lint": "eslint src/",
     "lint:fix": "eslint src/ --fix",
     "types:build": "tsc -p tsconfig.types.json && eslint --fix \"src/types/**/*.d.ts\"",
-    "submit": "npm publish --access public --//registry.npmjs.org/:_authToken=\"${NPM_ACCESS_TOKEN}\"",
-    "update": "npx npm-check-updates -u && npm install",
+    "submit": "pnpm publish --access public --//registry.npmjs.org/:_authToken=\"${NPM_ACCESS_TOKEN}\"",
+    "update": "pnpm up -L",
     "test": "node --test tests/unit/*.test.js",
     "test:unit": "node --test tests/unit/*.test.js",
     "pr": "gt submit --publish --restack --ai"
@@ -46,16 +46,14 @@
   "author": "gesslar",
   "license": "Unlicense",
   "homepage": "https://github.com/gesslar/toolkit#readme",
-  "devDependencies": {
-    "@stylistic/eslint-plugin": "^5.6.1",
-    "@types/node": "^25.0.3",
-    "@typescript-eslint/eslint-plugin": "^8.50.1",
-    "@typescript-eslint/parser": "^8.50.1",
-    "eslint": "^9.39.2",
-    "eslint-plugin-jsdoc": "^61.5.0",
-    "typescript": "^5.9.3"
-  },
+  "packageManager": "pnpm@10.26.2",
   "dependencies": {
-    "@gesslar/toolkit": "^2.7.1"
+    "@gesslar/toolkit": "^2.8.0"
+  },
+  "devDependencies": {
+    "eslint-plugin-jsdoc": "^61.5.0",
+    "typescript": "^5.9.3",
+    "@gesslar/uglier": "^0.0.8",
+    "eslint": "^9.39.2"
   }
 }
