--- a/package.json
+++ b/package.json
@@ -1,7 +1,25 @@
 {
   "name": "@gesslar/actioneer",
+  "description": "The best action pipeline thingie this side of Tatooine, or your money back.",
+  "author": "gesslar",
   "version": "1.0.0",
-  "description": "Ready? Set?? ACTION!! pew! pew! pew!",
+  "license": "Unlicense",
+  "homepage": "https://github.com/gesslar/toolkit#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gesslar/actioneer.git"
+  },
+  "keywords": [
+    "actioneer",
+    "pipeline",
+    "workflow",
+    "sabrina",
+    "salem",
+    "package",
+    "composition",
+    "lasagna"
+  ],
+  "packageManager": "pnpm@10.26.2",
   "main": "./src/index.js",
   "type": "module",
   "exports": {
@@ -29,31 +47,13 @@
     "test:unit": "node --test tests/unit/*.test.js",
     "pr": "gt submit --publish --restack --ai"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/gesslar/actioneer.git"
-  },
-  "keywords": [
-    "actioneer",
-    "pipeline",
-    "workflow",
-    "sabrina",
-    "salem",
-    "package",
-    "composition",
-    "lasagna"
-  ],
-  "author": "gesslar",
-  "license": "Unlicense",
-  "homepage": "https://github.com/gesslar/toolkit#readme",
-  "packageManager": "pnpm@10.26.2",
   "dependencies": {
-    "@gesslar/toolkit": "^2.8.0"
+    "@gesslar/toolkit": "^3.0.1"
   },
   "devDependencies": {
-    "eslint-plugin-jsdoc": "^61.5.0",
-    "typescript": "^5.9.3",
     "@gesslar/uglier": "^0.0.8",
-    "eslint": "^9.39.2"
+    "eslint": "^9.39.2",
+    "eslint-plugin-jsdoc": "^61.5.0",
+    "typescript": "^5.9.3"
   }
 }
