--- a/.github/workflows/Quality.yaml
+++ b/.github/workflows/Quality.yaml
@@ -132,7 +132,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [22.x]
+        node-version: [22.x, 24.x, 25.x]
 
     steps:
       - name: Check out repository
