--- a/.github/workflows/Quality.yaml
+++ b/.github/workflows/Quality.yaml
@@ -90,7 +90,7 @@ jobs:
             printf "Package manager set to 'auto'.\n"
             printf "Detecting: "
 
-            PM=$(jq -er .packageManager package.json)
+            PM=$(jq -r .packageManager package.json)
             printf "PM=%s\n" "$PM"
 
             if [[ ! "$PM" ]]; then
@@ -109,10 +109,8 @@ jobs:
             exit 1
           fi
 
-          if [[ $NODE_RAW =~ ([0-9]+)(\.[0-9]+)?(\.[0-9]+)? ]]; then
+          if [[ "$NODE_RAW" =~ [^0-9]*([0-9]+) ]]; then
             NODE_VERSION="${BASH_REMATCH[1]}"
-            [[ -n "${BASH_REMATCH[2]}" ]] && NODE_VERSION+="${BASH_REMATCH[2]}"
-            [[ -n "${BASH_REMATCH[3]}" ]] && NODE_VERSION+="${BASH_REMATCH[3]}"
           else
             echo "::error::Unable to parse engines.node ('${NODE_RAW}') for a Node.js version."
             exit 1
@@ -156,9 +154,7 @@ jobs:
         uses: actions/checkout@v6
 
       - name: Install pnpm
-        if: >
-          ${{ needs.ConfigureWorkflow.outputs.perform_linting == 'yes' &&
-              needs.ConfigureWorkflow.outputs.package_manager == 'pnpm' }}
+        if: ${{ needs.ConfigureWorkflow.outputs.perform_testing == 'yes' && needs.ConfigureWorkflow.outputs.package_manager == 'pnpm' }}
         uses: pnpm/action-setup@v4
         with:
           version: ${{ needs.ConfigureWorkflow.outputs.pm_version }}
@@ -199,9 +195,7 @@ jobs:
         uses: actions/checkout@v6
 
       - name: Install pnpm
-        if: >
-          ${{ needs.ConfigureWorkflow.outputs.perform_testing == 'yes' &&
-              needs.ConfigureWorkflow.outputs.package_manager == 'pnpm' }}
+        if: ${{ needs.ConfigureWorkflow.outputs.perform_testing == 'yes' && needs.ConfigureWorkflow.outputs.package_manager == 'pnpm' }}
         uses: pnpm/action-setup@v4
         with:
           version: ${{ needs.ConfigureWorkflow.outputs.pm_version }}
