--- a/.github/workflows/Quality.yaml
+++ b/.github/workflows/Quality.yaml
@@ -50,17 +50,17 @@ jobs:
     runs-on: ubuntu-latest
     permissions: {}
     outputs:
-      perform_linting: ${{ steps.cfg1.outputs.perform_linting }}
-      perform_testing: ${{ steps.cfg1.outputs.perform_testing }}
-      package_manager: ${{ steps.cfg2.outputs.package_manager }}
-      pm_install_cmd: ${{ steps.cfg2.outputs.pm_install_cmd }}
-      pm_default: ${{ steps.cfg1.outputs.pm_default }}
-      pm_version: ${{ steps.cfg2.outputs.pm_version }}
-      node_version: ${{ steps.cfg2.outputs.node_version }}
+      perform_linting: ${{ steps.cfg_main.outputs.perform_linting }}
+      perform_testing: ${{ steps.cfg_main.outputs.perform_testing }}
+      package_manager: ${{ steps.cfg_pm.outputs.package_manager }}
+      pm_install_cmd: ${{ steps.cfg_pm.outputs.pm_install_cmd }}
+      pm_default: ${{ steps.cfg_main.outputs.pm_default }}
+      pm_version: ${{ steps.cfg_pm.outputs.pm_version }}
+      node_version: ${{ steps.cfg_node.outputs.node_version }}
 
     steps:
       - name: Configure Linting and Testing
-        id: cfg1
+        id: cfg_main
         run: |+
           #############################################################
           PACKAGE_MANAGER="auto"
@@ -77,14 +77,13 @@ jobs:
         uses: actions/checkout@v6
 
       - name: Configure Package Manager
-        id: cfg2
+        id: cfg_pm
         run: |+
           set -euo pipefail
 
-          PM_DEFAULT="${{ steps.cfg1.outputs.pm_default }}"
-          PACKAGE_MANAGER="${{ steps.cfg1.outputs.package_manager }}"
+          PM_DEFAULT="${{ steps.cfg_main.outputs.pm_default }}"
+          PACKAGE_MANAGER="${{ steps.cfg_main.outputs.package_manager }}"
           PM_VERSION=""
-          NODE_VERSION=""
 
           if [[ "$PACKAGE_MANAGER" = "auto" ]]; then
             printf "Package manager set to 'auto'.\n"
@@ -104,6 +103,22 @@ jobs:
             fi
           fi
 
+          echo "package_manager=${PACKAGE_MANAGER}" >> "$GITHUB_OUTPUT"
+          echo "pm_version=${PM_VERSION}" >> "$GITHUB_OUTPUT"
+
+          if [[ "$PACKAGE_MANAGER" = "pnpm" ]]; then
+            echo "pm_install_cmd=pnpm install --frozen-lockfile" >> "$GITHUB_OUTPUT"
+          else
+            echo "pm_install_cmd=npm ci" >> "$GITHUB_OUTPUT"
+          fi
+
+      - name: Configure Node Version
+        id: cfg_node
+        run: |+
+          set -euo pipefail
+
+          NODE_VERSION=""
+
           if ! NODE_RAW=$(jq -er '.engines.node' package.json); then
             echo "::error::engines.node is required in package.json."
             exit 1
@@ -116,30 +131,22 @@ jobs:
             exit 1
           fi
 
-          echo "package_manager=${PACKAGE_MANAGER}" >> "$GITHUB_OUTPUT"
-          echo "pm_version=${PM_VERSION}" >> "$GITHUB_OUTPUT"
           echo "node_version=${NODE_VERSION}" >> "$GITHUB_OUTPUT"
-
-          if [[ "$PACKAGE_MANAGER" = "pnpm" ]]; then
-            echo "pm_install_cmd=pnpm install --frozen-lockfile" >> "$GITHUB_OUTPUT"
-          else
-            echo "pm_install_cmd=npm ci" >> "$GITHUB_OUTPUT"
-          fi
 
       - name: Display Configuration
         run: |+
-          printf "Linting: %s\n" "${{ steps.cfg1.outputs.perform_linting }}"
-          printf "Testing: %s\n" "${{ steps.cfg1.outputs.perform_testing }}"
-          printf "Package Manager: %s" "${{ steps.cfg2.outputs.package_manager }}"
+          printf "Linting: %s\n" "${{ steps.cfg_main.outputs.perform_linting }}"
+          printf "Testing: %s\n" "${{ steps.cfg_main.outputs.perform_testing }}"
+          printf "Package Manager: %s" "${{ steps.cfg_pm.outputs.package_manager }}"
 
-          if [[ "${{ steps.cfg2.outputs.package_manager }}" = "pnpm" ]]; then
-            printf " (%s)\n" "${{ steps.cfg2.outputs.pm_version }}"
+          if [[ "${{ steps.cfg_pm.outputs.package_manager }}" = "pnpm" ]]; then
+            printf " (%s)\n" "${{ steps.cfg_pm.outputs.pm_version }}"
           else
             printf "\n"
           fi
 
-          printf "Package Manager Install: %s\n" "${{ steps.cfg2.outputs.pm_install_cmd }}"
-          printf "Node: %s\n" "${{ steps.cfg2.outputs.node_version }}"
+          printf "Package Manager Install: %s\n" "${{ steps.cfg_pm.outputs.pm_install_cmd }}"
+          printf "Node: %s\n" "${{ steps.cfg_node.outputs.node_version }}"
 
   Lint:
     needs: ConfigureWorkflow
