--- a/.github/workflows/Release.yaml
+++ b/.github/workflows/Release.yaml
@@ -50,17 +50,18 @@ jobs:
     runs-on: ubuntu-latest
 
     outputs:
-      quality_check: ${{ steps.cfg.outputs.quality_check }}
-      git_user_name: ${{ steps.cfg.outputs.git_user_name }}
-      git_user_email: ${{ steps.cfg.outputs.git_user_email }}
-      package_manager: ${{ steps.pm.outputs.package_manager }}
-      pm_install_cmd: ${{ steps.pm.outputs.pm_install_cmd }}
-      pm_version: ${{ steps.pm.outputs.pm_version }}
-      node_version: ${{ steps.pm.outputs.node_version }}
+      quality_check: ${{ steps.cfg_main.outputs.quality_check }}
+      git_user_name: ${{ steps.cfg_main.outputs.git_user_name }}
+      git_user_email: ${{ steps.cfg_main.outputs.git_user_email }}
+      package_manager: ${{ steps.cfg2.outputs.package_manager }}
+      pm_install_cmd: ${{ steps.cfg2.outputs.pm_install_cmd }}
+      pm_default: ${{ steps.cfg1.outputs.pm_default }}
+      pm_version: ${{ steps.cfg2.outputs.pm_version }}
+      node_version: ${{ steps.cfg2.outputs.node_version }}
 
     steps:
       - name: Configure workflow
-        id: cfg
+        id: cfg_main
         run: |+
           #############################################################
           QUALITY_CHECK="CodeQL, Linting, Testing"
@@ -73,24 +74,26 @@ jobs:
           echo "quality_check=${QUALITY_CHECK}" >> "$GITHUB_OUTPUT"
           echo "git_user_name=${GIT_USER_NAME}" >> "$GITHUB_OUTPUT"
           echo "git_user_email=${GIT_USER_EMAIL}" >> "$GITHUB_OUTPUT"
+          echo "package_manager=${PACKAGE_MANAGER}" >> "$GITHUB_OUTPUT"
+          echo "pm_default=npm" >> "$GITHUB_OUTPUT"
 
       - name: Check out repository
         uses: actions/checkout@v6
 
-      - name: Detect package manager
-        id: pm
+      - name: Configure Package Manager
+        id: cfg_pm
         run: |+
           set -euo pipefail
 
-          PM_DEFAULT="npm"
-          PACKAGE_MANAGER="${PM_DEFAULT}"
+          PM_DEFAULT="${{ steps.cfg_main.outputs.pm_default }}"
+          PACKAGE_MANAGER="${{ steps.cfg_main.outputs.package_manager }}"
           PM_VERSION=""
 
           if [[ "$PACKAGE_MANAGER" = "auto" ]]; then
             printf "Package manager set to 'auto'.\n"
             printf "Detecting: "
 
-            PM=$(jq -er .packageManager package.json)
+            PM=$(jq -r .packageManager package.json)
             printf "PM=%s\n" "$PM"
 
             if [[ ! "$PM" ]]; then
@@ -104,31 +107,34 @@ jobs:
             fi
           fi
 
-          echo "Using package manager: ${PACKAGE_MANAGER}${PM_VERSION:+@${PM_VERSION}}"
+          echo "package_manager=${PACKAGE_MANAGER}" >> "$GITHUB_OUTPUT"
+          echo "pm_version=${PM_VERSION}" >> "$GITHUB_OUTPUT"
+
+          if [[ "$PACKAGE_MANAGER" = "pnpm" ]]; then
+            echo "pm_install_cmd=pnpm install --frozen-lockfile" >> "$GITHUB_OUTPUT"
+          else
+            echo "pm_install_cmd=npm ci" >> "$GITHUB_OUTPUT"
+          fi
+
+      - name: Configure Node Version
+        id: cfg_node
+        run: |+
+          set -euo pipefail
+
+          NODE_VERSION=""
 
           if ! NODE_RAW=$(jq -er '.engines.node' package.json); then
             echo "::error::engines.node is required in package.json."
             exit 1
           fi
 
-          if [[ $NODE_RAW =~ ([0-9]+)(\.[0-9]+)?(\.[0-9]+)? ]]; then
+          if [[ "$NODE_RAW" =~ [^0-9]*([0-9]+) ]]; then
             NODE_VERSION="${BASH_REMATCH[1]}"
-            [[ -n "${BASH_REMATCH[2]}" ]] && NODE_VERSION+="${BASH_REMATCH[2]}"
-            [[ -n "${BASH_REMATCH[3]}" ]] && NODE_VERSION+="${BASH_REMATCH[3]}"
           else
             echo "::error::Unable to parse engines.node ('${NODE_RAW}') for a Node.js version."
             exit 1
           fi
 
-          if [[ "$PACKAGE_MANAGER" = "pnpm" ]]; then
-            PM_INSTALL_CMD="pnpm install --frozen-lockfile"
-          else
-            PM_INSTALL_CMD="npm ci"
-          fi
-
-          echo "package_manager=${PACKAGE_MANAGER}" >> "$GITHUB_OUTPUT"
-          echo "pm_install_cmd=${PM_INSTALL_CMD}" >> "$GITHUB_OUTPUT"
-          echo "pm_version=${PM_VERSION}" >> "$GITHUB_OUTPUT"
           echo "node_version=${NODE_VERSION}" >> "$GITHUB_OUTPUT"
 
   WaitForQuality:
