--- a/.github/workflows/Quality.yaml
+++ b/.github/workflows/Quality.yaml
@@ -161,7 +161,7 @@ jobs:
         uses: actions/checkout@v6
 
       - name: Install pnpm
-        if: ${{ needs.ConfigureWorkflow.outputs.perform_testing == 'yes' && needs.ConfigureWorkflow.outputs.package_manager == 'pnpm' }}
+        if: ${{ needs.ConfigureWorkflow.outputs.perform_linting == 'yes' && needs.ConfigureWorkflow.outputs.package_manager == 'pnpm' }}
         uses: pnpm/action-setup@v4
         with:
           version: ${{ needs.ConfigureWorkflow.outputs.pm_version }}
