--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "@gesslar/actioneer",
   "description": "The best action pipeline thingie this side of Tatooine, or your money back.",
-  "author": "gesslar",
+  "author": {
+    "name": "gesslar",
+    "email": "bmw@gesslar.dev",
+    "url": "https://gesslar.dev"
+  },
   "version": "1.4.0",
   "license": "Unlicense",
   "homepage": "https://github.com/gesslar/toolkit#readme",
@@ -47,7 +51,7 @@
     "pr": "gt submit -p --ai"
   },
   "dependencies": {
-    "@gesslar/toolkit": "^3.3.0"
+    "@gesslar/toolkit": "^3.4.0"
   },
   "devDependencies": {
     "@gesslar/uglier": "^0.0.9",
