--- a/package.json
+++ b/package.json
@@ -45,16 +45,19 @@
     "lint:fix": "eslint src/ --fix",
     "types:build": "tsc -p tsconfig.types.json && eslint --fix \"src/types/**/*.d.ts\"",
     "submit": "pnpm publish --access public --//registry.npmjs.org/:_authToken=\"${NPM_ACCESS_TOKEN}\"",
-    "update": "pnpm up -L",
+    "update": "pnpm up --latest --recursive",
     "test": "node --test tests/unit/*.test.js",
     "test:unit": "node --test tests/unit/*.test.js",
-    "pr": "gt submit -p --ai"
+    "pr": "gt submit -p --ai",
+    "patch": "pnpm version patch",
+    "minor": "pnpm version minor",
+    "major": "pnpm version major"
   },
   "dependencies": {
-    "@gesslar/toolkit": "^3.4.0"
+    "@gesslar/toolkit": "^3.6.0"
   },
   "devDependencies": {
-    "@gesslar/uglier": "^0.0.9",
+    "@gesslar/uglier": "^0.5.0",
     "eslint": "^9.39.2",
     "typescript": "^5.9.3"
   }
